--- a/portafolio.html
+++ b/portafolio.html
@@ -26,133 +26,121 @@
           </div>
         </div>
     </nav>
-    <section id="proyectos" class="container my-5 py-5">
-        <h2 class="display-4 fw-bold text-center text-secondary mb-3">Mis Proyectos</h2>
 
-        <div class="row row-cols-2 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="card">
-             <img src="assets/img/ingreso_lpp.png" loading="lazy" class="card-img-top" alt="appLpp">
+    <section id="proyectos" class="container my-5 py-5">
+      <h2 class="display-4 fw-bold text-center text-secondary mb-3">Mis Proyectos</h2>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/ingreso_lpp.png" loading="lazy" class="card-img-top" alt="appLpp">
              <img src="assets/img/inicio-app.png" loading="lazy" class="card-img-top" alt="appLpp">
-             <img src="assets/img/ingreso_pcte.png" loading="lazy" class="card-img-top" alt="appLpp">
-             <img src="assets/img/registro-lpp.png" loading="lazy" class="card-img-top" alt="appLpp">
-              <div class="card-body">
-                <h5 class="card-title">Proyecto de Mejora Lesiones por presión</h5>
-                <p class="card-text">Proyecto de Mejora, para optar a título de Técnico de Nivel Superior en ingeniería Informática realizado en base a PHP y  uso de base de datos MySql. </p>
-                <p class="card-text"><small class="text-muted">Septiembre 2022 - Octubre 2023</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-               <img src="assets/img/curriculum.png" loading="lazy" class="card-img-top" alt="curriculum">
-                <div class="card-body">
-                  <h5 class="card-title">Curriculum HTML</h5>
-                  <p class="card-text">Curriculum vitae solo con etiquetas HTML</p>
-                  <p class="card-text"><small class="text-muted">Octubre 2023</small></p>
-                  <a href="https://nanicocio.github.io/IDW_introduccionHTML_CV/
-                  " class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                </div>
-              </div>
-            </div>
-          <div class="col">
-              <div class="card">
-                <img src="assets/img/CSS.png" loading="lazy" class="card-img-top" alt="CSS">
-                <img src="assets/img/CSS2.png" loading="lazy" class="card-img-top" alt="CSS2">
-                <div class="card-body">
-                  <h5 class="card-title">Página con css</h5>
-                  <p class="card-text">Estilos con CSS</p>
-                  <p class="card-text"><small class="text-muted">Noviembre 2023</small></p>
-                  <a href="https://nanicocio.github.io/proyectocss_kmlash/
-                  " class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                </div>
-              </div>
-          </div>
-          <div class="col">
-              <div class="card">
-                <img src="assets/img/iguana.png" loading="lazy" class="img-fluid rounded-start" alt="iguana">
-                    <img src="assets/img/iguana2.png" loading="lazy" class="img-fluid rounded-start" alt="iguana2">
-                <div class="card-body">
-                  <h5 class="card-title">Flexbox</h5>
-                  <p class="card-text">Página web utilizando Flexbox</p>
-                  <p class="card-text"><small class="text-muted">Noviembre 2023</small></p>
-                  <a href="https://nanicocio.github.io/clase_flexbox_iguana/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                </div>
-              </div>
-          </div>
-          <div class="col">
-              <div class="card">
-                <img src="assets/img/cuppon.png" loading="lazy" class="card-img-top" alt="cuppon">
-                <img src="assets/img/CUPPON2.png" loading="lazy" class="card-img-top" alt="CUPPON2">
-                <div class="card-body">
-                  <h5 class="card-title">Bootstrap</h5>
-                  <p class="card-text">Página web utilizando estilos con Bootstrap</p>
-                  <p class="card-text"><small class="text-muted">Noviembre 2023</small></p>
-                  <a href="https://nanicocio.github.io/clase_boopstrap_cuppon/
-                  " class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <img src="assets/img/freelancer.png" loading="lazy" class="card-img-top" alt="freelancer">
-                  <img src="assets/img/freelancer2.png" loading="lazy" class="card-img-top" alt="freelancer">
-                  <div class="card-body">
-                    <h5 class="card-title">Freelancer</h5>
-                    <p class="card-text">Página en base a html y css</p>
-                    <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
-                    <a href="https://nanicocio.github.io/proyecto_freelancer/
-                    " class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <img src="assets/img/store.png" loading="lazy" class="card-img-top" alt="store">
-                  <img src="assets/img/store2.png" loading="lazy" class="card-img-top" alt="store">
-                  <div class="card-body">
-                    <h5 class="card-title">Store</h5>
-                    <p class="card-text">Página creada con grillas, utilizando css</p>
-                    <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
-                    <a href="https://nanicocio.github.io/proyectostore/
-                    " class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <img src="assets/img/musica.png" loading="lazy" class="card-img-top" alt="festival musica">
-                  <img src="assets/img/musica1.png" loading="lazy" class="card-img-top" alt="festival musica">
-                  <img src="assets/img/musica2.png" loading="lazy" class="card-img-top" alt="festival musica">
-                  <div class="card-body">
-                    <h5 class="card-title">Festival de Música</h5>
-                    <p class="card-text">Página creada con grillas, utilizando SASS</p>
-                    <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
-                    <a href="https://nanicocio.github.io/Proyecto_FestivalMusica/
-                    " class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                  </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                  <img src="assets/img/CAFE.png" loading="lazy" class="card-img-top" alt="blog_cafe">
-                  <img src="assets/img/CAFE1.png" loading="lazy" class="card-img-top" alt="blog_cafe">
-                  <img src="assets/img/CAFE2.png" loading="lazy" class="card-img-top" alt="blog_cafe">
-                  <div class="card-body">
-                    <h5 class="card-title">Blog de Café</h5>
-                    <p class="card-text">Página creada html y css</p>
-                    <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
-                    <a href="https://nanicocio.github.io/proyecto_blogdecafe/
-                    " class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-                  </div>
-                </div>
+            <div class="card-body">
+              <h5 class="card-title">Proyecto de Mejora Lesiones por presión</h5>
+              <p class="card-text">Proyecto de Mejora, para optar a título de Técnico de Nivel Superior en ingeniería Informática realizado en base a PHP y  uso de base de datos MySql. </p>
             </div>
           </div>
         </div>
-        
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/curriculum.png" loading="lazy" class="card-img-top" alt="curriculum">
+            <div class="card-body">
+              <h5 class="card-title">Curriculum HTML</h5>
+              <p class="card-text">Curriculum vitae solo con etiquetas HTML</p>
+              <p class="card-text"><small class="text-muted">Octubre 2023</small></p>
+              <a href="https://nanicocio.github.io/IDW_introduccionHTML_CV/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/CSS.png" loading="lazy" class="card-img-top" alt="CSS">
+            <img src="assets/img/CSS2.png" loading="lazy" class="card-img-top" alt="CSS2">
+            <div class="card-body">
+              <h5 class="card-title">Página con css</h5>
+              <p class="card-text">Estilos con CSS</p>
+              <p class="card-text"><small class="text-muted">Noviembre 2023</small></p>
+              <a href="https://nanicocio.github.io/proyectocss_kmlash/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/iguana.png" loading="lazy" class="img-fluid rounded-start" alt="iguana">
+            <img src="assets/img/iguana2.png" loading="lazy" class="img-fluid rounded-start" alt="iguana2">
+            <div class="card-body">
+              <h5 class="card-title">Flexbox</h5>
+              <p class="card-text">Página web utilizando Flexbox</p>
+              <p class="card-text"><small class="text-muted">Noviembre 2023</small></p>
+              <a href="https://nanicocio.github.io/clase_flexbox_iguana/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/cuppon.png" loading="lazy" class="card-img-top" alt="cuppon">
+            <img src="assets/img/CUPPON2.png" loading="lazy" class="card-img-top" alt="CUPPON2">
+            <div class="card-body">
+              <h5 class="card-title">Bootstrap</h5>
+              <p class="card-text">Página web utilizando estilos con Bootstrap</p>
+              <p class="card-text"><small class="text-muted">Noviembre 2023</small></p>
+              <a href="https://nanicocio.github.io/clase_boopstrap_cuppon/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/freelancer.png" loading="lazy" class="card-img-top" alt="freelancer">
+            <img src="assets/img/freelancer2.png" loading="lazy" class="card-img-top" alt="freelancer">
+            <div class="card-body">
+              <h5 class="card-title">Freelancer</h5>
+              <p class="card-text">Página en base a html y css</p>
+              <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
+              <a href="https://nanicocio.github.io/proyecto_freelancer/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/store.png" loading="lazy" class="card-img-top" alt="store">
+            <img src="assets/img/store2.png" loading="lazy" class="card-img-top" alt="store">
+            <div class="card-body">
+              <h5 class="card-title">Store</h5>
+              <p class="card-text">Página creada con grillas, utilizando css</p>
+              <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
+              <a href="https://nanicocio.github.io/proyectostore/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/musica.png" loading="lazy" class="card-img-top" alt="festival musica">
+            <img src="assets/img/musica1.png" loading="lazy" class="card-img-top" alt="festival musica">
+            <img src="assets/img/musica2.png" loading="lazy" class="card-img-top" alt="festival musica">
+            <div class="card-body">
+              <h5 class="card-title">Festival de Música</h5>
+              <p class="card-text">Página creada con grillas, utilizando SASS</p>
+              <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
+              <a href="https://nanicocio.github.io/Proyecto_FestivalMusica/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/CAFE.png" loading="lazy" class="card-img-top" alt="blog_cafe">
+            <img src="assets/img/CAFE1.png" loading="lazy" class="card-img-top" alt="blog_cafe">
+            <img src="assets/img/CAFE2.png" loading="lazy" class="card-img-top" alt="blog_cafe">
+            <div class="card-body">
+              <h5 class="card-title">Blog de Café</h5>
+              <p class="card-text">Página creada html y css</p>
+              <p class="card-text"><small class="text-muted">Diciembre 2022</small></p>
+              <a href="https://nanicocio.github.io/proyecto_blogdecafe/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
-
-
-
+    
     <section id="redes" class="container text-center my-5">
       <!--Redes-->
       <h2 class="display-3 fw-bold my-4 text-center text-secondary">Contactame</h2>
