--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
             </div>
         </div>
     </header>
+    <section id="sobre-mi" class="p-5 bg-secondary">
+      <!--Experiencia-->
+      <h2 class="display-3 fw-bold my-4 text-center text-light">Sobre Mí</h2>
+
+      <div class="card d-flex text-center border border-0">
+        <div class="card">
+          <div class="card-body fs-5">
+            Enfermera Magallanica, titulada el año 2018, de la universidad más austral de Chile, la Universidad de Magallanes, al poco andar me dí cuenta que a pesar de amar el área en donde me desempeño, había algo en mí que buscaba aprender más cosas, abrirme campo laboral y poder sumar mi granito de arena en otra área, y por que no, poder complementar ambas, es por ello que nace la inquietud de estudiar técnico en informática, llevandolo a cabo, durante periodo de pandemia, en donde tuve que estudiar de forma online y seguir desempeñando mis labores en el área de la salud, buscando tiempos para ir aprendiendo y poder culminar mi carrera.
+          </div>
+        </div>
+      </div>
+    </section>
     
     <section id="educacion" class="p-5">
       <!--Educación-->
