agrego card proyecto mensajeria

--- a/portafolio.html
+++ b/portafolio.html
@@ -31,25 +31,17 @@
       <h2 class="display-4 fw-bold text-center text-secondary mb-3">Mis Proyectos</h2>
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
+          <div class="col">
           <div class="card">
-            <img src="assets/img/ingreso_lpp.png" loading="lazy" class="card-img-top" alt="appLpp">
-             <img src="assets/img/inicio-app.png" loading="lazy" class="card-img-top" alt="appLpp">
+            <img src="assets/img/sistema-mensajeria.png" loading="lazy" class="card-img-top" alt="sistema-mensajeria">
             <div class="card-body">
-              <h5 class="card-title">Proyecto de Mejora Lesiones por presión</h5>
-              <p class="card-text">Proyecto de Mejora, para optar a título de Técnico de Nivel Superior en ingeniería Informática realizado en base a PHP y  uso de base de datos MySql. </p>
+              <h5 class="card-title">Sistema de Mensajería. Desafío LATAM</h5>
+              <p class="card-text">Página creada en base a Flexbox y bootstrap</p>
+              <p class="card-text"><small class="text-muted">Diciembre 2023</small></p>
+              <a href="https://nanicocio.github.io/flexbox-sistemamensajeria/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card">
-            <img src="assets/img/curriculum.png" loading="lazy" class="card-img-top" alt="curriculum">
-            <div class="card-body">
-              <h5 class="card-title">Curriculum HTML</h5>
-              <p class="card-text">Curriculum vitae solo con etiquetas HTML</p>
-              <p class="card-text"><small class="text-muted">Octubre 2023</small></p>
-              <a href="https://nanicocio.github.io/IDW_introduccionHTML_CV/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
-            </div>
-          </div>
         </div>
         <div class="col">
           <div class="card">
@@ -84,6 +76,16 @@
               <p class="card-text">Página web utilizando estilos con Bootstrap</p>
               <p class="card-text"><small class="text-muted">Noviembre 2023</small></p>
               <a href="https://nanicocio.github.io/clase_boopstrap_cuppon/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="assets/img/ingreso_lpp.png" loading="lazy" class="card-img-top" alt="appLpp">
+            <img src="assets/img/inicio-app.png" loading="lazy" class="card-img-top" alt="appLpp">
+            <div class="card-body">
+              <h5 class="card-title">Proyecto de Mejora Lesiones por presión</h5>
+              <p class="card-text">Proyecto de Mejora, para optar a título de Técnico de Nivel Superior en ingeniería Informática realizado en base a PHP y  uso de base de datos MySql. </p>
             </div>
           </div>
         </div>
