agrego card de proyecto

--- a/portafolio.html
+++ b/portafolio.html
@@ -33,6 +33,30 @@
         <div class="col">
           <div class="col">
           <div class="card">
+            <img src="assets/img/grid-1.png" loading="lazy" class="card-img-top" alt="grid-1">
+            <img src="assets/img/grid-2.png" loading="lazy" class="card-img-top" alt="grid-2">
+            <div class="card-body">
+              <h5 class="card-title">Página e-commerce extensiones de pestañas, desafío latam</h5>
+              <p class="card-text">Página creada en sistema de Grid</p>
+              <p class="card-text"><small class="text-muted">Diciembre 2023</small></p>
+              <a href="<div class="col">
+          <div class="col">
+          <div class="card">
+            <img src="assets/img/sistema-mensajeria.png" loading="lazy" class="card-img-top" alt="sistema-mensajeria">
+            <div class="card-body">
+              <h5 class="card-title">Sistema de Mensajería. Desafío LATAM</h5>
+              <p class="card-text">Página creada en base a Flexbox y bootstrap</p>
+              <p class="card-text"><small class="text-muted">Diciembre 2023</small></p>
+              <a href="https://nanicocio.github.io/proyecto_grid/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="col">
+          <div class="card">
             <img src="assets/img/sistema-mensajeria.png" loading="lazy" class="card-img-top" alt="sistema-mensajeria">
             <div class="card-body">
               <h5 class="card-title">Sistema de Mensajería. Desafío LATAM</h5>
