--- a/portafolio.html
+++ b/portafolio.html
@@ -38,6 +38,8 @@
               <h5 class="card-title">Página e-commerce extensiones de pestañas, desafío latam</h5>
               <p class="card-text">Página creada en sistema de Grid</p>
               <p class="card-text"><small class="text-muted">Diciembre 2023</small></p>
+              <a href="https://nanicocio.github.io/proyecto_grid/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
           </div>
         </div>
 
@@ -52,7 +54,7 @@
             </div>
           </div>
         </div>
-        </div>
+
         <div class="col">
           <div class="card">
             <img src="assets/img/CSS.png" loading="lazy" class="card-img-top" alt="CSS">
@@ -65,6 +67,7 @@
             </div>
           </div>
         </div>
+
         <div class="col">
           <div class="card">
             <img src="assets/img/iguana.png" loading="lazy" class="img-fluid rounded-start" alt="iguana">
