--- a/portafolio.html
+++ b/portafolio.html
@@ -32,6 +32,19 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
+            <img src="assets/img/animacion.png" loading="lazy" class="card-img-top" alt="grid-1">
+            <img src="assets/img/animacion2.png" loading="lazy" class="card-img-top" alt="grid-2">
+            <div class="card-body">
+              <h5 class="card-title">Página repostería</h5>
+              <p class="card-text">Media Query, Animaciones CSS, Bootstrap</p>
+              <p class="card-text"><small class="text-muted">Enero 2024</small></p>
+              <a href="https://nanicocio.github.io/animacionescss/" class="btn btn-secondary d-flex justify-content-center" role="button" href=""> Ver más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card">
             <img src="assets/img/grid-1.png" loading="lazy" class="card-img-top" alt="grid-1">
             <img src="assets/img/grid-2.png" loading="lazy" class="card-img-top" alt="grid-2">
             <div class="card-body">
