--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   Me caracterizo por ser una persona trabajadora, con un gran sentido de responsabilidad en mi trabajo, con ganas de seguir creciendo y aprendiendo nuevas tecnologías y herramientas que me otorgen un plus en mi perfil profesional.
                 </p>
                 <div class="mb-5 pb-5">
-                  <a class="btn btn-lg btn-secondary btn-lg text-light" href="https://github.com/NaniCocio">Mi Portafolio</a>
+                  <a class="btn btn-lg btn-secondary btn-lg text-light" href="portafolio.html">Mi Portafolio</a>
               </div>
             </div>
         </div>
